syntax = "proto3";

package inventory;
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc createInventory(CreateInventoryRequest) returns (InventoryResponse);
  rpc lockInventory(LockInventoryRequest) returns (LockInventoryResponse);
  rpc getStock(GetStockRequest) returns (GetStockResponse);
}

message LockInventoryRequest {
  repeated Product products = 1;
}

message LockInventoryResponse {
  bool error = 1;
  bool lock = 2;
  string message = 3;
}

message Product {
  string productId = 1;
  string variantId = 2;
  int32 quantity = 3;
}

message InventoryRequest {
  string variantId = 1;
  string productId = 2;
  string sku = 3;
  string location = 4;
  int32 stock = 5;
}

message CreateInventoryRequest {
  InventoryRequest inventory = 1;
}

message InventoryResponse {
  bool success = 1;
  string message = 2;
  string inventoryId = 3;
}

message GetStockRequest {
  string productId = 1;
  string variantId = 2;
}

message GetStockResponse {
  int32 stock = 1;
}